mcs/gemma-2b-it-vllm-gpu-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-gemma-2b-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-gemma-2b-it
  template:
    metadata:
      labels:
        app: vllm-gemma-2b-it
    spec:
      serviceAccountName: default
      containers:
        - name: inference-server
          image: vllm/vllm-openai:latest
          resources:
            requests:
              cpu: "2"
              memory: "16Gi"
              ephemeral-storage: 10Gi
              nvidia.com/gpu: "1"
            limits:
              cpu: "2"
              memory: "16Gi"
              ephemeral-storage: 10Gi
              nvidia.com/gpu: "1"
          args:
            - --model=google/gemma-2b-it
            - --tensor-parallel-size=1
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          lifecycle:
            preStop:
              sleep:
                seconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /health
              port: http
              scheme: HTTP
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-gemma-2b-it
spec:
  selector:
    app: vllm-gemma-2b-it
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
